RESOLVED FIXED287454
Selection fails to update during auto as well as keyboard scrolling.
https://bugs.webkit.org/show_bug.cgi?id=287454
Summary Selection fails to update during auto as well as keyboard scrolling.
Megan Gardner
Reported 2025-02-10 19:34:59 PST
Selection fails to update during auto as well as keyboard scrolling.
Attachments
Megan Gardner
Comment 1 2025-02-10 19:35:01 PST
Megan Gardner
Comment 2 2025-02-10 19:36:29 PST
Alexey Proskuryakov
Comment 3 2025-02-11 09:16:07 PST
*** Bug 287453 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2025-02-12 13:07:58 PST
Committed 290299@main (c79a81698e55): <https://commits.webkit.org/290299@main> Reviewed commits have been landed. Closing PR #40390 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.