Selection fails to update during autoscrolling as well as keyboard scrolling. https://bugs.webkit.org/show_bug.cgi?id=287454 rdar://144581646

Reviewed by Aditya Keerthi and Wenson Hsieh.

When a user uses the keyboard or the autoscroll functionality to
scroll a view while a selection is happening, they don't generate
additional touches unless their finger moves. Thus if you
hold your finger still while scrolling, the selection doesn't update.
In order to for a selection to update, we keep track of the position of
the last touch and use it to update the selection when the view is scrolled.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView scrollViewDidScroll:]):
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.h:
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView updateSelection]):
(-[WKContentView changeSelectionWithTouchAt:withSelectionTouch:baseIsStart:withFlags:]):
(-[WKContentView updateSelectionWithTouchAt:withSelectionTouch:baseIsStart:withFlags:]):

Canonical link: https://commits.webkit.org/290299@main